test_suite/tests/ui/string/validate/duplicated.stderr
error: Duplicated validators `len_char_min`.
       Don't worry, you still remain ingenious!
 --> tests/ui/string/validate/duplicated.rs:3:72
  |
3 | #[nutype(validate(len_char_min = 5, len_char_max = 255, len_char_min = 6))]
  |                                                                        ^
